Adding user table and alembic rebuilding

--- a/backend/database/alembic.ini
+++ b/backend/database/alembic.ini
@@ -1,7 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlite:///./test.db
-# This is the database URL for your application. Change it to your actual database URL.
+sqlalchemy.url = sqlite:///./tagger_db.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
@@ -13,8 +12,9 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = WARN
 handlers = console
+qualname =
 
 [logger_sqlalchemy]
 level = WARN
@@ -28,9 +28,10 @@ qualname = alembic
 
 [handler_console]
 class = StreamHandler
-args =
+args = (sys.stderr,)
 level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(asctime)s - %(name)s - %(levelname)s - %(message)s
+format = %(levelname)-5.5s [%(name)s] %(message)s
+datefmt = %H:%M:%S
