Fixing database functions

--- a/backend/database/alembic.ini
+++ b/backend/database/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlite:///./tagger_db.db
+sqlalchemy.url = sqlite:////E:/Code_Projects/Image_Tagger/backend/database/tagger_db.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
